--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
-$col-bg: rgba(86,61,124,.15);
-$col-bd: rgba(86,61,124,.15);
-$blue-light:  rgba(0,0,255,.1);
+// COLORS
+
+$gray-dark: $gray-800;
+$white: $gray-100;
