--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,27 +1,9 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
-// @import "abstracts/_variables"
+@import "abstracts/variables";
 
+@import "base/base";
+@import "base/utilities";
 
-
-$col-bg: rgba(86,61,124,.15);
-$col-bd: rgba(86,61,124,.15);
-$blue-light:  rgba(255,0,0,.1);
-
-[class^="col"] {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    background-color: $col-bg;
-    border: 1px solid $col-bd;
-    text-align: center;
-}
-
-.user-level .row {
-    height: 100vh;
-    background: $teal;
-}
-
-.user-level {
-    background-color: $blue-light;
-    height: 100vh;
-}
+@import "pages/user";
+@import "pages/home";
