--- a/assets/sass/pages/_user.scss
+++ b/assets/sass/pages/_user.scss
@@ -1,18 +1,17 @@
-[class^="col"] {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    background-color: $col-bg;
-    border: 1px solid $col-bd;
-    text-align: center;
-}
-
-.user-level .row {
-    height: 100vh;
-    color: $blue;
-    background: $teal;
-}
-
 .user-level {
-    background-color: $blue-light;
-    height: 100vh;
+    background: $gray-dark;
+    color: $white;
+    text-align: center;
+    
+    .row {
+        height: 100vh;
+    }
+    
+    &__login-link {
+        &:focus {
+            box-shadow: none;
+            background-color: #0069d9;
+            border-color: #0062cc;
+        }
+    }
 }
