--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,5 +5,9 @@
 @import "base/base";
 @import "base/utilities";
 
+@import "components/section-hero";
+
+@import "layout/header";
+
 @import "pages/user";
 @import "pages/home";
