finish the operador and suporte home-page.

--- a/assets/sass/components/_section-hero.scss
+++ b/assets/sass/components/_section-hero.scss
@@ -8,11 +8,13 @@
       
         i {
             position: absolute;
-            left: 10px;
+            top: 11px;
+            left: 12px;
         }
         
         .form-control {
             padding-left: 35px;
+            border-radius: 20px;
         }
     }
 }
