--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6282,6 +6282,19 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
+.no-white-space {
+  white-space: normal !important; }
+
+.mt-2_3 {
+  margin-top: 2.3rem !important; }
+
+.w-85 {
+  width: 85% !important; }
+
+.py-6 {
+  padding-top: 6rem !important;
+  padding-bottom: 6rem !important; }
+
 .section-hero .row {
   height: 320px; }
 
@@ -6289,9 +6302,18 @@ a.text-dark:hover, a.text-dark:focus {
   position: relative; }
   .section-hero .form-inline i {
     position: absolute;
-    left: 10px; }
+    top: 11px;
+    left: 12px; }
   .section-hero .form-inline .form-control {
-    padding-left: 35px; }
+    padding-left: 35px;
+    border-radius: 20px; }
+
+.content .group-chamados-btn {
+  padding-top: 3.2rem; }
+
+.content .card-body {
+  padding: 0 4rem 1rem 0;
+  margin-top: -1rem; }
 
 .user-level .row {
   height: 100vh; }
