add accessibility on header and start making responsive

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    // .navbar-collapse {
-    //     flex-grow: 0;
-    // }
+ .dropdown-toggle::after {
+     vertical-align: 0.12em;
+ }
 }
