--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6315,6 +6315,9 @@ a.text-dark:hover, a.text-dark:focus {
   padding: 0 4rem 1rem 0;
   margin-top: -1rem; }
 
+.header .dropdown-toggle::after {
+  vertical-align: 0.12em; }
+
 .user-level .row {
   height: 100vh; }
 
