finish artigo-page and topic-results and make then responsive

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -1,3 +1,11 @@
+// COLORS
+
+$gray-dark: $gray-800;
+$white: $gray-100;
+
+$breadcrumb-divider: quote(">");
+
+// UTITLITIES
 .no-white-space {
     white-space: normal !important;
 }
