--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -1,3 +1,10 @@
+.content {
+    .card-body {
+        padding: 0 4rem 1rem 0;
+        margin-top: -1rem;
+    }
+}
+
 .section-hero {
     .row {
         height: 320px;
