--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,14 +1,9 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
-@import "abstracts/variables";
+@import "base";
 
-@import "base/base";
-@import "base/utilities";
-
-@import "components/section-hero";
-@import "components/content";
+@import "components";
 
 @import "layout/header";
 
 @import "pages/user";
-@import "pages/home";
