--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6291,9 +6291,10 @@ a.text-dark:hover, a.text-dark:focus {
 .w-85 {
   width: 85% !important; }
 
-.content .card-body {
-  padding: 0 4rem 1rem 0;
-  margin-top: -1rem; }
+.btn:focus, .btn:active {
+  box-shadow: none !important;
+  background-color: #117a8b;
+  border-color: #10707f; }
 
 .section-hero .row {
   height: 320px; }
@@ -6307,6 +6308,19 @@ a.text-dark:hover, a.text-dark:focus {
   .form-inline .form-control {
     padding-left: 35px;
     border-radius: 20px; }
+
+.accordion .card-body {
+  padding: 0 0 1rem 0;
+  margin-top: -1rem; }
+  @media (min-width: 768px) {
+    .accordion .card-body {
+      padding: 0 4rem 1rem .2rem; } }
+  @media (min-width: 992px) {
+    .accordion .card-body {
+      padding: 0 2rem 1rem .2rem; } }
+  @media (min-width: 1200px) {
+    .accordion .card-body {
+      padding: 0 5rem 1rem .2rem; } }
 
 .header .dropdown-toggle::after {
   vertical-align: 0.12em; }
@@ -6328,7 +6342,7 @@ a.text-dark:hover, a.text-dark:focus {
 .user-level .row {
   height: 100vh; }
 
-.user-level__login-link:focus {
+.user-level__login-link:focus, .user-level__login-link:active {
   box-shadow: none;
   background-color: #0069d9;
   border-color: #0062cc; }
